# FastPFOR-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  justfile
.github/workflows/: ci.yml  dependabot.yml
benches/: bench_utils.rs  fastpfor_benchmark.rs  justfile
fuzz/: .gitignore  Cargo.toml  README.md  justfile
fuzz/fuzz_targets/: common.rs  compare_fastpfor_128.rs  cpp_roundtrip.rs  decode_arbitrary.rs  decode_oracle.rs  encode_compare.rs  encode_oracle.rs  fastpfor_cpp.rs  fastpfor_roundtrip.rs  fastpfor_rust.rs  rust_compress_oracle.rs  rust_decompress_arbitrary.rs  rust_decompress_oracle.rs
src/: codec.rs  error.rs  helpers.rs  lib.rs  test_utils.rs
src/cpp/: README.md  codecs.rs  mod.rs  tests.rs  wrappers.rs
src/rust/: bytebuffer.rs  composite.rs  cursor.rs  error.rs  mod.rs
src/rust/integer_compression/: bitpacking.rs  bitunpacking.rs  codec.rs  composition.rs  fastpfor.rs  helpers.rs  integer_codec.rs  just_copy.rs  mod.rs  skippable_codec.rs  variable_byte.rs
src/rust/integer_compression/differential/: mod.rs
tests/: basic_tests.rs  benchmark_smoke.rs  common.rs  cpp_compat_tests.rs  decode_error_paths.rs  decode_validation.rs  encode_paths.rs  fuzzer_findings.rs  test_data.rs
