[package]
name = "fastpfor"
version = "0.6.3"
description = "FastPFOR lib with C++ Rust wrapper and pure Rust implementation"
authors = [
    "Francisco Jimenez <jjcfrank@gmail.com>",
    "Yuri Astrakhan <YuriAstrakhan@gmail.com>",
]
repository = "https://github.com/jjcfrancisco/fastpfor"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["fastpfor", "compression"]
categories = ["compression"]
rust-version = "1.86.0"

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "fastpfor_benchmark"
required-features = ["rust"]
harness = false

[features]
# Eventually we may want to build without the C++ bindings by default.
# Keeping it on for now to simplify development.
default = ["cpp"]
cpp = ["dep:cmake", "dep:cxx", "dep:cxx-build"]
rust = ["dep:thiserror", "dep:bytes"]

[dependencies]
bytes = { version = "1.11", optional = true }
cxx = { version = "1.0.194", optional = true }
thiserror = { version = "2.0.18", optional = true }

[build-dependencies]
cmake = { version = "0.1.57", optional = true }
cxx-build = { version = "1.0.194", optional = true }

[dev-dependencies]
criterion = "0.8"
rand = "0.10.0"

[lints.rust]
dead_code = "allow"
unused_assignments = "allow"
unused_qualifications = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
unreadable_literal = "allow"
