[package]
name = "fastpfor"
version = "0.8.0"
description = "FastPFOR lib with C++ Rust wrapper and pure Rust implementation"
authors = [
    "Francisco Jimenez <jjcfrank@gmail.com>",
    "Yuri Astrakhan <YuriAstrakhan@gmail.com>",
]
repository = "https://github.com/jjcfrancisco/fastpfor"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["fastpfor", "compression"]
categories = ["compression"]
rust-version = "1.86.0"

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "fastpfor_benchmark"
required-features = ["rust"]
harness = false

[features]
# Eventually we may want to build without the C++ bindings by default.
# Keeping it on for now to simplify development.
default = ["cpp"]
# Used internally for testing and benchmarking. Not intended for public use.
_all_compatible = ["cpp_portable", "rust"]
# Use portable C++ code that will not rely on the latest CPU features. This is the default for the C++ bindings.
cpp_portable = ["cpp"]
# Optimize FastPFOR for the current CPU.
cpp_native = ["cpp"]
cpp = ["dep:cmake", "dep:cxx", "dep:cxx-build"]
rust = ["dep:thiserror", "dep:bytes"]

[dependencies]
bytes = { version = "1.11", optional = true }
cxx = { version = "1.0.194", optional = true }
thiserror = { version = "2.0.18", optional = true }

[build-dependencies]
cmake = { version = "0.1.57", optional = true }
cxx-build = { version = "1.0.194", optional = true }

[dev-dependencies]
criterion = "0.8"
rand = "0.10.0"

[lints.rust]
unused_qualifications = "warn"
missing_docs = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unreadable_literal = "allow"
