[package]
name = "fastpfor-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
fastpfor = { path = "..", features = ["cpp", "rust"] }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "cpp_roundtrip"
path = "fuzz_targets/cpp_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "rust_compress_oracle"
path = "fuzz_targets/rust_compress_oracle.rs"
test = false
doc = false

[[bin]]
name = "rust_decompress_oracle"
path = "fuzz_targets/rust_decompress_oracle.rs"
test = false
doc = false
