[package]
name = "fastpfor-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
fastpfor = { path = "..", features = ["cpp", "rust"] }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[lints.rust]
unused_qualifications = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
use_self = "warn"
# Allow certain lints that are common in fuzz targets and not worth fixing.
doc_markdown = "allow"
wildcard_imports = "allow"

[[bin]]
name = "cpp_roundtrip"
path = "fuzz_targets/cpp_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "encode_oracle"
path = "fuzz_targets/encode_oracle.rs"
test = false
doc = false

[[bin]]
name = "decode_oracle"
path = "fuzz_targets/decode_oracle.rs"
test = false
doc = false

[[bin]]
name = "decode_arbitrary"
path = "fuzz_targets/decode_arbitrary.rs"
test = false
doc = false

[[bin]]
name = "encode_compare"
path = "fuzz_targets/encode_compare.rs"
test = false
doc = false

[[bin]]
name = "compare_fastpfor_128"
path = "fuzz_targets/compare_fastpfor_128.rs"
test = false
doc = false
